--- a/whale-core/pom.xml
+++ b/whale-core/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>whale-common</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
